--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Mamba = "5424a776-8be3-5c5b-a13f-3551f69ba0e6"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
@@ -27,4 +28,4 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["GitHub", "Sockets", "StatsFuns", "Test", "Profile", "ForwardDiff", "DelimitedFiles", "CmdStan", "FileIO", "Gadfly", "JLD2", "Mamba", "Plots", "ProfileView", "StatsBase", "Turing", "UnicodePlots"]
+test = ["Pkg", "CmdStan", "DelimitedFiles", "FileIO", "ForwardDiff", "Gadfly", "JLD2", "Mamba", "Plots", "Profile", "ProfileView", "StatsBase", "StatsFuns", "Test", "Turing", "UnicodePlots"]
