--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@ name = "TuringBenchmarks"
 uuid = "ed6ffa36-4043-51a8-9a34-7a55e06872e4"
 
 [deps]
+CmdStan = "593b3428-ca2f-500c-ae53-031589ec8ddd"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
