--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-src/cmdstan_home.jl
 cmdstan/
 deps/build.log
 data/stan-data/ldastandata*
 tmp/
+benchmark_results/*
+!benchmark_results/.gitkeep
 test/ldamodel.svg
 config/stop-server
 config/*.priv.toml
