--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,6 @@ uuid = "ed6ffa36-4043-51a8-9a34-7a55e06872e4"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
-CmdStan = "593b3428-ca2f-500c-ae53-031589ec8ddd"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
@@ -12,7 +11,6 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Mustache = "ffc61752-8dc7-55ee-8c37-f3e9cdd09e70"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [extras]
 CmdStan = "593b3428-ca2f-500c-ae53-031589ec8ddd"
@@ -32,4 +30,4 @@ Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
 UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["CmdStan", "DelimitedFiles", "FileIO", "ForwardDiff", "Gadfly", "JLD2", "Mamba", "Plots", "Profile", "ProfileView", "StatsBase", "StatsFuns", "Test", "Turing", "UnicodePlots"]
+test = ["DelimitedFiles", "FileIO", "ForwardDiff", "Gadfly", "JLD2", "Mamba", "Plots", "Profile", "ProfileView", "StatsBase", "StatsFuns", "Test", "UnicodePlots"]
