--- a/Project.toml
+++ b/Project.toml
@@ -13,21 +13,9 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [extras]
-CmdStan = "593b3428-ca2f-500c-ae53-031589ec8ddd"
-DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
-FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
-Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
-JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
-Mamba = "5424a776-8be3-5c5b-a13f-3551f69ba0e6"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
-UnicodePlots = "b8865327-cd53-5732-bb35-84acbb429228"
 
 [targets]
-test = ["DelimitedFiles", "FileIO", "ForwardDiff", "Gadfly", "JLD2", "Mamba", "Plots", "Profile", "ProfileView", "StatsBase", "StatsFuns", "Test", "UnicodePlots"]
+test = ["Profile", "ProfileView", "Test"]
