--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,15 @@ notifications:
 
 script:
   - julia --check-bounds=yes -e 'using Pkg;
-                              Pkg.build("TuringBenchmarks");
-                              Pkg.test("TuringBenchmarks"; coverage=true)'
+                              Pkg.build("ContinuousBenchmarks");
+                              Pkg.test("ContinuousBenchmarks"; coverage=true)'
 
 after_success:
-  - julia -e 'cd(Pkg.dir("TuringBenchmarks")); Pkg.add("Coverage");
+  - julia -e 'cd(Pkg.dir("ContinuousBenchmarks")); Pkg.add("Coverage");
               using Coverage; Coveralls.submit(process_folder())'
   - julia -e 'using Pkg; Pkg.add("Documenter")'
-  - julia -e 'using Pkg, TuringBenchmarks;
-              cd(joinpath(dirname(pathof(TuringBenchmarks)), ".."));
+  - julia -e 'using Pkg, ContinuousBenchmarks;
+              cd(joinpath(dirname(pathof(ContinuousBenchmarks)), ".."));
               include(joinpath("docs", "make.jl"))'
 notifications:
     email: false
