--- a/config/app.travis.toml
+++ b/config/app.travis.toml
@@ -13,4 +13,4 @@ report_branch = "report"
 repo = "TuringLang/Turing.jl"
 use_remote_branches = true
 project_dir = "."
-benchmark_files = "benchmarks/benchmark_list.jl"
+benchmark_config_file = "benchmarks/benchmark_config.jl"
