--- a/config/app.travis.toml
+++ b/config/app.travis.toml
@@ -1,7 +1,7 @@
 [github]
 # the information of the bot account
-user = "TuringBenchBot"
-email = "TuringBenchBot@email.com"
+user = "BayesBot"
+email = "BayesBot@email.com"
 token = "PRIVATE_INFO"
 
 # Benchmark reports will be committed to this repo
